# DataQrunch

./: Cargo.toml  Dockerfile  README.md
src/: authenticate_user.rs  dataset.rs  dataset_dto.rs  get_dataset.rs  get_datasets_list.rs  get_user_session_data.rs  log_error.rs  login.rs  main.rs  new_dataset.rs  redis_manager.rs  session_key.rs  user_session_data.rs  user_session_data_cache.rs
src/api/: get_authenticated_user_id.rs  get_user_bearer_token.rs  mod.rs
src/api/datasets/: dataset.rs  dataset_dto.rs  get_dataset.rs  list_datasets.rs  mod.rs  new_dataset.rs
src/api/datasets/handlers/: get_dataset.rs  list_datasets.rs  mod.rs  new_dataset.rs  put_dataset.rs
src/api/datasets/models/: dataset.rs  dataset_info.rs  mod.rs
src/authentication/: get_authority.rs  mod.rs
src/authentication/contract/: claims.rs  errors.rs  mod.rs
src/authentication/handlers/: fetch_jkws.rs  get_authenticated_user_id.rs  get_claims.rs  get_user_id.rs  mod.rs  validate_request.rs  validate_token.rs
src/services/: mod.rs
src/services/datasets/: create_dataset.rs  get_dataset.rs  get_user_dir_name.rs  list_datasets.rs  mod.rs  update_dataset.rs
