[package]
name = "DataQrunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
serde_json = "1.0.94"
chashmap = "2.2.2"
flate2 = "1.0.25"
