[package]
name = "DataQrunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
serde_json = "1.0.94"
chashmap = "2.2.2"
flate2 = "1.0.25"
env_logger = "0.10.0"
log = "0.4.19"
actix-session = { version="0.7.2", features=["redis-actor-session"] }
derive_more = "0.99.17"
alcoholic_jwt = "1.0.1"
jsonwebtoken = "8.3.0"
reqwest = { version="0.11.18", features=["json"] }

[dependencies.redis]
version = "0.23.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]
